# TSD

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy_to_pypi_on_release.yml  deploy_to_test_pypi_on_main_push.yml
example/: data.json  example.py  test.py
tau/: TextAnnotation.py  Visualizer.py  tools.py
testing/: unit-testing.py
textmark/: TextAnnotation.py  Visualizer.py
tsd/: TextAnnotation.py  TextSpottingDataset.py  Visualizer.py  __init__.py  visualize.py
